Add `gatsby-plugin` keyword
This keyword is needed in order to be included on Gatsby Plugins page:
https://www.gatsbyjs.org/contributing/submit-to-plugin-library/

--- a/gatsby-theme-intro/package.json
+++ b/gatsby-theme-intro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wkocjan/gatsby-theme-intro",
   "description": "Personal branding theme for developers",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "author": "Wojciech Kocjan <wojciech@kocjan.net>",
   "dependencies": {
@@ -35,6 +35,7 @@
   },
   "keywords": [
     "gatsby",
+    "gatsby-plugin",
     "gatsby-theme",
     "gatsby-theme-intro",
     "personal",
