--- a/site/package.json
+++ b/site/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@wkocjan/gatsby-theme-intro": "*",
     "gatsby": "^2.20.12",
-    "react-dom": "^16.12.0",
-    "react": "^16.12.0"
+    "gatsby-plugin-google-analytics": "^2.3.11",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
