--- a/site/content/profile.yaml
+++ b/site/content/profile.yaml
@@ -6,21 +6,21 @@
   image: images/profile.png
   location: Waterloo, Canada
   relocation: true
-  company: University of Waterloo
+  company:  Apple
   for_hire: true
   focus: Building OAK Studio
   focus_url: https://oaksvideo.com
   about: |
     I'm a software engineer based in Waterloo, ON specializing in building and designing exceptional software systems 
-    ranging from distributed database engine with pure Java and consumer-centric video platform with gRPC & various 
-    languages, to efficient atom trapping system using ML approaches.  
+    and infrastructure ranging from distributed SQL engine and consumer-centric content management platform to advanced
+    algorithms and data visualization tools.
   skills:
     - Java
     - gRPC
-    - Node.js
+    - Python
   tools:
     - Gradle
-    - React
+    - Docker
     - SQL
   budget:
     currency: $
