--- a/site/content/work-history.yaml
+++ b/site/content/work-history.yaml
@@ -1,12 +1,17 @@
+- company: Apple
+  position: Software Engineer
+  period: January 2021 - present
+  url: https://www.apple.com/newsroom/
+
 - company: Institute for Quantum Computing
   position: Research Assistant
-  period: January 2020 - present
+  period: January 2020 - December 2020
   url: https://tqt.uwaterloo.ca
 
 - company: Huawei
   position: Software Engineer @ openLooKeng
   period: September 2019 - December 2019
-  url: https://www.huawei.com
+  url: https://www.huawei.com/en/corporate-information
 
 - company: 360 Education Labs
   position: Software Developer
