--- a/gatsby-theme-intro/package.json
+++ b/gatsby-theme-intro/package.json
@@ -1,36 +1,35 @@
 {
   "name": "@wkocjan/gatsby-theme-intro",
   "description": "Personal branding theme for developers",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "main": "index.js",
   "author": "Wojciech Kocjan <wojciech@kocjan.net>",
   "dependencies": {
-    "autoprefixer": "^9.7.6",
-    "color": "^3.1.2",
-    "gatsby-image": "^2.3.4",
-    "gatsby-plugin-postcss": "^2.2.1",
-    "gatsby-plugin-react-helmet": "^3.2.1",
+    "autoprefixer": "^10.2.5",
+    "color": "^3.1.3",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-postcss": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.4.6",
-    "gatsby-transformer-yaml": "^2.3.3",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-transformer-yaml": "^3.0.0",
+    "gatsby": "^3.0.0",
     "postcss-input-range": "^4.0.0",
+    "postcss": "^8.2.8",
+    "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.9.0",
-    "tailwindcss": "^1.2.0"
-  },
-  "devDependencies": {
-    "gatsby": "^2.20.12",
-    "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react": "^17.0.1",
+    "tailwindcss": "^2.0.3"
   },
   "peerDependencies": {
-    "gatsby": "^2.20.12",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "gatsby": "^3.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "keywords": [
     "gatsby",
@@ -41,6 +40,9 @@
     "react",
     "website"
   ],
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
