--- a/site/package.json
+++ b/site/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@wkocjan/gatsby-theme-intro": "*",
-    "gatsby": "^2.20.12",
-    "react-dom": "^16.12.0",
-    "react": "^16.12.0"
+    "gatsby": "^3.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
