Update company and profile

--- a/site/content/profile.yaml
+++ b/site/content/profile.yaml
@@ -6,7 +6,7 @@
   image: images/profile.png
   location: Waterloo, Canada
   relocation: true
-  company:  Apple
+  company: University of Waterloo
   for_hire: true
   focus: Building OAK Studio
   focus_url: https://oaksvideo.com
