--- a/gatsby-theme-intro/content/profile.yaml
+++ b/gatsby-theme-intro/content/profile.yaml
@@ -1,6 +1,6 @@
 - profile:
-  initials: JD
-  name: John Doe
+  initials: pp
+  name: pravin jadhav
   profession: Web Developer
   image: images/profile.jpg
   location: New York, USA
