--- a/site/content/work-history.yaml
+++ b/site/content/work-history.yaml
@@ -1,18 +1,19 @@
-- company: Atomic Studio
-  position: Senior Web Developer
-  period: January 2018 - present
-  url: https://atomic.studio
+- company: Microsoft
+  position: Cloud Solution Architect
+  period: June 2021 - present
+  url: https://microsoft.com
 
-- company: Atomic Studio
-  position: Web Developer
-  period: January 2014 - December 2017
-  url: https://atomic.studio
+- company: Oracle
+  position: Cloud Architect
+  period: August 2020 - June 2021
+  url: https://oracle.com
 
-- company: WebConnect Agency
-  position: Junior Web Developer
-  period: November 2010 - December 2013
-  url:
+- company: Oracle
+  position: Cloud Solution Engineer - Technical Pre Sales
+  period: August 2019 - August 2020
+  url: https://oracle.com
 
-- company: Freelance
-  position: Web Developer
-  period: April 2008 - October 2010
+- company: Digpro AB
+  position: Full Stack Developer/Technical Consultant
+  period: February 2017 - May 2019
+  url: https://digpro.com
