--- a/site/content/profile.yaml
+++ b/site/content/profile.yaml
@@ -1,26 +1,29 @@
 - profile:
-  initials: JD
-  name: John Doe
-  profession: Web Developer
+  initials: RE
+  name: Rasmus Eduards
+  profession: Cloud Solution Architect
   image: images/profile.jpg
-  location: New York, USA
-  relocation: true
-  company: Atomic Studio
-  for_hire: true
-  focus: Learning Gatsby
+  location: Stockholm, Sweden
+  relocation: false
+  company: Microsoft
+  for_hire: false
+  focus: Learning IaC DevOps
   focus_url: https://gatsbyjs.org
   about: |
-    Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
+    Civil Engineer that took a leap into tech cloud.
 
-    User generated content in real-time will have multiple touchpoints for offshoring. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
+    Helping key accounts and enteprise accounts in Sweden with challenges around technical cloud deployment but also the overall governance of the environment. Focusing on cloud infrastructure at scale. In particular automation and the transition into cloud native technologies. Some of the technologies I touch base with is Kubernetes, Infrastructure as code, docker, serverless and beyond.
+
+    I have an academic and working background within Geographical Information Systems, so in many cases I also help customers with solutions that falls under that umbrella.
+    One example of that is helping a customer automate there drone photogrammetry and laser scanning in order to create orthophotos and 3D-modells.
   skills:
-    - JavaScript
-    - HTML / CSS
-    - Ruby on Rails
+    - Cloud Infrastructure
+    - Cloud Native Technology
+    - GIS/Location Technology
   tools:
-    - React
-    - VSCode
-    - Gatsby
+    - Linux
+    - Python
+    - Terraform/ARM
   budget:
     currency: $
     min: 5
