--- a/site/content/profile.yaml
+++ b/site/content/profile.yaml
@@ -12,7 +12,7 @@
   about: |
     Civil Engineer that took a leap into tech cloud.
 
-    Helping key accounts and enteprise accounts in Sweden with challenges around technical cloud deployment but also the overall governance of the environment. Focusing on cloud infrastructure at scale. In particular automation and the transition into cloud native technologies. Some of the technologies I touch base with is Kubernetes, Infrastructure as code, docker, serverless and beyond.
+    Helping key accounts and enteprise accounts in Sweden with challenges around technical cloud deployment but also the overall challange of having strong governance with freedom for the application teams, to create a secure and agile cloud enviroment. Focusing on cloud infrastructure at scale. In particular automation and the transition into cloud native technologies. Some of the technologies I touch base with is Kubernetes, Infrastructure as code, docker, serverless and beyond.
 
     I have an academic and working background within Geographical Information Systems, so in many cases I also help customers with solutions that falls under that umbrella.
     One example of that is helping a customer automate there drone photogrammetry and laser scanning in order to create orthophotos and 3D-modells.
