--- a/gatsby-theme-intro/package.json
+++ b/gatsby-theme-intro/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "author": "Wojciech Kocjan <wojciech@kocjan.net>",
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "autoprefixer": "^10.2.5",
     "color": "^3.1.3",
+    "gatsby": "^3.0.0",
     "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-postcss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
@@ -15,15 +17,14 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "gatsby-transformer-yaml": "^3.0.0",
-    "gatsby": "^3.0.0",
-    "postcss-input-range": "^4.0.0",
     "postcss": "^8.2.8",
+    "postcss-input-range": "^4.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
+    "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react": "^17.0.1",
     "tailwindcss": "^2.0.3"
   },
   "peerDependencies": {
