--- a/gatsby-theme-intro/package.json
+++ b/gatsby-theme-intro/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@wkocjan/gatsby-theme-intro",
+  "name": "@lehnfeld/gatsby-theme-intro",
   "description": "Personal branding theme for developers",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "main": "index.js",
-  "author": "Wojciech Kocjan <wojciech@kocjan.net>",
+  "author": "Niklsd Lehnfeld <niklas@lehnfeld.net>",
   "dependencies": {
     "@formspree/react": "^2.2.4",
     "autoprefixer": "^10.2.5",
@@ -54,9 +54,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wkocjan/gatsby-theme-intro"
+    "url": "https://github.com/NiklasLehnfeld/gatsby-theme-intro"
   },
   "bugs": {
-    "url": "https://github.com/wkocjan/gatsby-theme-intro/issues"
+    "url": "https://github.com/NiklasLehnfeld/gatsby-theme-intro/issues"
   }
 }
