--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "private": true,
-  "version": "2.0.1",
+  "name": "site",
+  "version": "1.0.0",
   "main": "index.js",
+  "author": "Wojciech Kocjan <wojciech@kocjan.net>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn workspace site build",
-    "clean": "yarn workspace site clean",
-    "develop": "yarn workspace site develop"
+    "build": "gatsby build",
+    "clean": "gatsby clean",
+    "develop": "gatsby develop"
   },
-  "workspaces": [
-    "gatsby-theme-intro",
-    "site"
-  ]
+  "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@wkocjan/gatsby-theme-intro": "*",
+    "babel-eslint": "^10.0.0",
+    "eslint": ">= 4.12.1",
+    "gatsby": "^3.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "typescript": ">=2.7",
+    "webpack": "^4.0.0 || ^5.0.0"
+  }
 }
