--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,18 +1,14 @@
-- company: Atomic Studio
-  position: Senior Web Developer
-  period: January 2018 - present
-  url: https://atomic.studio
-
-- company: Atomic Studio
-  position: Web Developer
-  period: January 2014 - December 2017
-  url: https://atomic.studio
-
-- company: WebConnect Agency
-  position: Junior Web Developer
-  period: November 2010 - December 2013
-  url:
+- company: Energime University
+  position: Senior Software Engineer
+  period: February 2021 - present
+  url: https://energimeuniversity.org
 
 - company: Freelance
-  position: Web Developer
-  period: April 2008 - October 2010
+  position: Software Engineer
+  period: April 2021 - present
+  url: https://www.peopleperhour.com/freelancer/technology-programming/iftekhar-riyad-expert-software-developer-qmmxwmv
+
+- company: LineupAppQ
+  position: Software Engineer
+  period: October 2021 - February 2022
+  url: https://www.lineupappq.com/
