changed github projects and some profile info

--- a/my-site/content/profile.yaml
+++ b/my-site/content/profile.yaml
@@ -7,7 +7,7 @@
   relocation: true
   company: Microsoft
   for_hire: false
-  focus: Learning Infrastructure DevOps Automation
+  focus: Cloud Native and Core Infrastructure
   focus_url: https://gatsbyjs.org
   about: |
     Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
