added info and new project

--- a/site/content/profile.yaml
+++ b/site/content/profile.yaml
@@ -7,7 +7,7 @@
   relocation: false
   company: Microsoft
   for_hire: false
-  focus: Learning IaC DevOps
+  focus: Cloud Native and Core Infrastructure
   focus_url: https://gatsbyjs.org
   about: |
     Civil Engineer that took a leap into tech cloud.
