--- a/site/content/projects.yaml
+++ b/site/content/projects.yaml
@@ -1,18 +1,12 @@
-- name: Example 1
-  url: https://github.com
-  description: Override the digital divide with additional clickthroughs from DevOps. User generated content in real-time will have multiple touchpoints for offshoring.
-  status: in progress
-  tags:
-    - JavaScript
-    - Gatsby
-  icon: github
-
-- name: Example 2
-  url: https://github.com
-  description: Leverage agile frameworks to provide a robust synopsis for high level overviews.
+- name: OpenDroneMap Automation Deployment in Azure
+  url: https://github.com/reduards/Azure-ODM-Automation-Deployment
+  description: I built an automated way of constructing orthophoto and 3D models from drone images using OpenDroneMap(https://github.com/OpenDroneMap/ODM) technology
+   in Azure. The process is triggered via http trigger(Azure Function) and can be configured to be triggered on upload or through a front-end GUI.
   status: live
   tags:
-    - JavaScript
-    - HTML
-  icon: website
-  image: images/project.jpg
+    - Python
+    - shell
+    - Azure
+    - ODM
+  icon: drone
+  image: images/drone.jpg
