--- a/gatsby-theme-intro/content/work-history.yaml
+++ b/gatsby-theme-intro/content/work-history.yaml
@@ -1,18 +1,10 @@
-- company: Atomic Studio
+- company: Riiwards
   position: Senior Web Developer
   period: January 2018 - present
-  url: https://atomic.studio
-
-- company: Atomic Studio
-  position: Web Developer
-  period: January 2014 - December 2017
-  url: https://atomic.studio
-
-- company: WebConnect Agency
-  position: Junior Web Developer
-  period: November 2010 - December 2013
-  url:
+  url: https://riiwards.com
 
 - company: Freelance
   position: Web Developer
-  period: April 2008 - October 2010
+  period: January 2018 - December 2021
+  url: https://upwork.com
+
