--- a/gatsby-theme-intro/package.json
+++ b/gatsby-theme-intro/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "@wkocjan/gatsby-theme-intro",
+  "name": "gatsby-theme-intro",
   "description": "Personal branding theme for developers",
-  "version": "2.0.1",
+  "version": "3.0.0a",
   "main": "index.js",
   "author": "Wojciech Kocjan <wojciech@kocjan.net>",
   "dependencies": {
-    "autoprefixer": "^10.2.5",
-    "color": "^3.1.3",
-    "gatsby-plugin-image": "^1.0.1",
-    "gatsby-plugin-postcss": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^3.0.1",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "gatsby-transformer-yaml": "^3.0.0",
-    "gatsby": "^3.0.0",
-    "postcss-input-range": "^4.0.0",
-    "postcss": "^8.2.8",
-    "prettier": "^2.2.1",
-    "prop-types": "^15.7.2",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react": "^17.0.1",
-    "tailwindcss": "^2.0.3"
+    "autoprefixer": "^10.4.0",
+    "color": "^4.2.3",
+    "gatsby": "^5.3.3",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-postcss": "^6.3.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-sharp": "^5.3.1",
+    "gatsby-transformer-yaml": "^5.3.0",
+    "postcss-input-range": "^5.0.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.1",
+    "react-icons": "^4.7.1",
+    "tailwindcss": "^3.2.4"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "gatsby": "^5.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.1"
   },
   "keywords": [
     "gatsby",
@@ -41,7 +39,7 @@
     "website"
   ],
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=18.0.0"
   },
   "license": "MIT",
   "scripts": {
