--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .cache
 public
 node_modules
+!yarn.lock
+
+# Non zero-install (https://next.yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored)
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
