--- a/gatsby-theme-intro/package.json
+++ b/gatsby-theme-intro/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "gatsby-theme-intro",
+  "name": "@wkocjan/gatsby-theme-intro",
   "description": "Personal branding theme for developers",
   "version": "3.0.0",
   "author": "Wojciech Kocjan <wojciech@kocjan.net>",
   "dependencies": {
-    "@babel/core": "^7.20.7",
-    "autoprefixer": "^10.4.0",
+    "@babel/core": "^7.21.3",
+    "autoprefixer": "^10.4.14",
     "color": "^4.2.3",
-    "gatsby-plugin-image": "^3.3.2",
-    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-postcss": "^6.8.0",
     "gatsby-plugin-react-svg": "^3.3.0",
-    "gatsby-plugin-postcss": "^6.3.0",
-    "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-transformer-sharp": "^5.3.1",
-    "gatsby-transformer-yaml": "^5.3.0",
+    "gatsby-plugin-sharp": "^5.8.0",
+    "gatsby-source-filesystem": "^5.8.0",
+    "gatsby-transformer-sharp": "^5.8.0",
+    "gatsby-transformer-yaml": "^5.8.0",
+    "postcss": "^8.4.21",
     "postcss-input-range": "^5.0.0",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
-    "react-icons": "^4.7.1",
-    "tailwindcss": "^3.2.4"
+    "react-icons": "^4.8.0",
+    "tailwindcss": "^3.2.7"
   },
   "peerDependencies": {
     "gatsby": "^5.3.3",
