--- a/site/content/profile.yaml
+++ b/site/content/profile.yaml
@@ -10,7 +10,7 @@
   focus: Cloud Native and Core Infrastructure
   focus_url: https://gatsbyjs.org
   about: |
-    Civil Engineer that took a leap into tech cloud.
+    Civil Engineer that took a leap into tech cloud!
 
     Helping key accounts and enteprise accounts in Sweden with challenges around technical cloud deployment but also the overall challange of having strong governance with freedom for the application teams, to create a secure and agile cloud enviroment. Focusing on cloud infrastructure at scale. In particular automation and the transition into cloud native technologies. Some of the technologies I touch base with is Kubernetes, Infrastructure as code, docker, serverless and beyond.
 
